Style links & modals; plus, other small style/content changes (#19)
* tidy .section-content

* h1 -> p

* format link text (#16)

this prevents unwanted spaces from appearing in rendered links.

* links don't breathe.

* Update style.css

when text is begun to be typed, it is left-justified, and not in the centre.

* set padding around links.

* add var(--grey)

* update border-thickness of zoomed-out modals

* Merge branch 'content' into style-modals

commit 6c6858ebaf8fbff26fdb03430254a0891c1a39d6
Author: shobhan-ss <86220370+shobhan-ss@users.noreply.github.com>
Date:   Sat Jul 27 19:35:55 2024 +0530

    add missing link.

* Merge branch 'main' into style-modals

Squashed commit of the following:

commit 50766d9c34f1d30d41939c7c95971da3d48c73d2
Merge: b1898bd 059f37e
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Sat Jul 27 19:48:53 2024 +0530

    Merge branch 'main' of https://github.com/kaizer1v/brown_uni

commit b1898bd187f62a7e28dc98959f11e3687058512f
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Sat Jul 27 17:17:59 2024 +0530

    updated version

commit 1d80af997486bc0302cdf23512575196c595be61
Merge: 624ab38 48f08d7
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Sat Jul 27 17:15:55 2024 +0530

    Merge branch 'main' of https://github.com/kaizer1v/brown_uni

commit 624ab38e7f61f31c3b1ab0b71eaef110c6da504f
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Sat Jul 27 17:14:00 2024 +0530

    mp3 file

commit afcb0b3d11a0d96b2ece7474379b259db57c0d5e
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Tue Jul 23 11:10:26 2024 +0530

    DOESN't WORK

commit 703bd22d2c1ec8d10a90b64e5dc80105907f7fdc
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Tue Jul 23 10:01:46 2024 +0530

    WIP

* Merge branch 'main' into style-modals

Squashed commit of the following:

commit d119577276a5c8f27efcf667680e51dd01426ae9
Merge: 50766d9 5378c12
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Sat Jul 27 19:56:47 2024

--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
 
 :root, [data-bs-theme=light] {
   --basefontsize: calc(1rem + 3vw);
-  --baseborderthickness: calc(.5 * var(--basefontsize));
+  --baseborderthickness: calc(1 * var(--basefontsize));
+  --zoomoutarticlewidth: var(2 * var(--basefontsize));
   --basefontcolour: #222;
   --green: #35A6AD;
   --red: #EF4748;
@@ -95,8 +96,15 @@ section {
   padding: 1rem;
   font-size: calc(.5rem + 1vw);
 }
+  .dialog-wrapper.zoomout .content {
+    max-height: calc(var(--basefontsize)*10);
+    max-width: calc(var(--basefontsize)*10);
+    overflow: hidden;
+    margin-bottom: var(--basefontsize);
+  }
   .dialog-wrapper .expand-collapse {
     display: block;
+    opacity: 1;
     width: 40px;
     height: 40px;
     background-color: grey;
@@ -111,6 +119,9 @@ section {
     font-weight: bold;
     cursor: pointer !important;
   }
+  .dialog-wrapper.zoomout .expand-collapse {
+    opacity: 0;
+  }
   .dialog-wrapper .year { font-size: 0.7rem; }
   .positive-story { border: var(--baseborderthickness) solid var(--green); }
   .negative-story { border: var(--baseborderthickness) solid var(--red); }
@@ -120,7 +131,7 @@ section {
     font-weight: 500;
     padding: 17px 30px;
     border-bottom: 1px solid #ccc;
-    transform: scale(.15);
+    transform: scale(.1);
   }
   .dialog-wrapper .content { padding: 2rem; }
 
@@ -138,24 +149,7 @@ section {
     transform: translate(-30%, -30%) scale(1);
   }
 }
-@keyframes breathe {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0.2;
-  }
-}
-@keyframes reveal {
-  from {
-    opacity: 0.1;
-    transform: translate(0, 0);
-  }
-  to   {
-    opacity: 1;
-    transform: translate(-30%, -30%);
-  }
-}
+
 .zoomin {
   animation-name: zoom;
   animation-direction: normal;
@@ -188,14 +182,8 @@ a.p, a.n, a.e, a.m {
   cursor: pointer;
 }
 a.p, a.n, a.e {
-  --padding-sides: calc(.2 * var(--basefontsize));
-  --padding-top: calc(var(--padding-sides) * .5);
-  padding: var(--padding-top) var(--padding-sides) 0;
-  animation-name: breathe;
-  animation-duration: 1.5s;
-  animation-direction: alternate;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
+  --padding: calc(.2 * var(--basefontsize));
+  padding: 0 var(--padding);
   cursor: zoom-in;
 }
 
@@ -213,7 +201,9 @@ a.e /* general world news */
 {
   background-color: var(--grey);
 }
-a.m /* "read more" */ {  }
+a.m /* "read more" */ { 
+  text-decoration: underline; 
+}
 
 
 /** utility classes **/
