--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ section {
 
 .dialog-wrapper {
   position: absolute;
+  min-width: 300px;
   max-width: 450px;
   width: 100%;
   background: var(--white);
