--- a/style.css
+++ b/style.css
@@ -78,7 +78,8 @@ section {
   max-width: 450px;
   width: 100%;
   background: var(--white);
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.125);
+  /* box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.125); */
+  box-shadow: 15px 15px 30px #00000054;
   padding: 1rem;
   font-size: 1.2rem;
 }
@@ -90,11 +91,10 @@ section {
     font-family: monospace;
     color: var(--white);
     position: absolute;
-    left: -42px;
-    top: -2px;
+    left: -60px;
+    top: -22px;
     text-align: center;
     font-size: 1.8rem;
-    font-weight: bold;
     cursor: pointer !important;
   }
   .dialog-wrapper .year { font-size: 0.7rem; }
