--- a/style.css
+++ b/style.css
@@ -105,14 +105,17 @@ section {
       color: #555;
       float: right;
     }
+    .drawer-head .nav {
+      font-size: 1rem !important;
+    }
 
-.dialog-wrapper {
+/* .dialog-wrapper {
   position: absolute;
   min-width: 300px;
   max-width: 450px;
   width: 100%;
   background: var(--white);
-  box-shadow: 15px 15px 30px #00000054;
+  box-shadow: 15px 15px 30px #000;
   padding: 1rem;
   font-size: 1.2rem;
 }
@@ -154,7 +157,7 @@ section {
   transform: scale(.1);
   z-index: 10;
 }
-  .zoomout:hover { cursor: zoom-in !important; }
+  .zoomout:hover { cursor: zoom-in !important; } */
 
 
 /* ----- */
