now able to move across stories for each of the links

--- a/style.css
+++ b/style.css
@@ -194,7 +194,9 @@ a.e { background-color: var(--grey); }
 /* "read more" */
 a.m {  }
 
-
+/* carousel items */
+.carousel-item { display: none; }
+.carousel-item.active { display: block; }
 
 /* ----- */
 /* Utility Classes */
