--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ section {
 
 
 /* ----- */
-/* Story Dialogs */
+/* Story Drawer */
 /* ----- */
 .drawer {
   position: fixed;
@@ -79,8 +79,8 @@ section {
   right: 0;
   width: 100%;
   z-index: 999;
-  padding: 5rem;
-  background-color: white;
+  padding: 3rem;
+  background-color: #fff;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
@@ -91,74 +91,54 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 20px;
-    background-color: #f0f0f0;
+    padding: 1rem 2rem;
+    background-color: var(--grey);
     border-bottom: 1px solid #ccc;
   }
     .drawer-head .title {
-      font-size: 18px;
+      font-size: 1rem;
       font-weight: bold;
       float: left;
     }
     .drawer-head .status {
-      font-size: 14px;
-      color: #555;
+      font-size: 1rem;
+      color: var(--black);
       float: right;
     }
     .drawer-head .nav {
       font-size: 1rem !important;
     }
-
-/* .dialog-wrapper {
-  position: absolute;
-  min-width: 300px;
-  max-width: 450px;
-  width: 100%;
-  background: var(--white);
-  box-shadow: 15px 15px 30px #000;
-  padding: 1rem;
-  font-size: 1.2rem;
-}
-  .dialog-wrapper .expand-collapse {
-    display: block;
-    width: 40px;
-    height: 40px;
-    background-color: grey;
-    font-family: monospace;
-    color: var(--white);
-    position: absolute;
-    left: -64px;
-    top: -24px;
-    text-align: center;
-    font-size: 1.8rem;
-    cursor: pointer !important;
-    line-height: 1.5;
-    font-weight: bolder;
+  .drawer-content {
+    font-size: 2rem;
   }
-  .dialog-wrapper .year { font-size: 0.7rem; }
-  .positive-story { border: var(--baseborderthickness) solid var(--green); }
-  .negative-story { border: var(--baseborderthickness) solid var(--red); }
-  .neutral-story  { border: var(--baseborderthickness) solid var(--grey); }
-  .dialog-wrapper header {
-    padding: 17px 30px;
-    border-bottom: 1px solid #ccc;
+    .drawer-content span { font-size: 1rem; }
+  
+  .drawer-foot { float: right }
+
+  button {
+    border: 1px solid var(--black);
+    padding: 0.5rem;
+    background: none;
+    cursor: pointer;
   }
-  .dialog-wrapper .content { padding: 2rem; }
 
-.zoomin {
-  transform: scale(1);
-  z-index: 999;
-  font-size: calc(1vw + 0.6vh + 1vmin);
-  position: absolute !important;
-  top: 30px;
-  left: 30px;
+.drawer.positive {
+  border: 20px solid var(--green);
+  border-bottom: none;
 }
-.zoomout {
-  transform: scale(.1);
-  z-index: 10;
-}
-  .zoomout:hover { cursor: zoom-in !important; } */
 
+.drawer.negative {
+  border: 20px solid var(--red);
+  border-bottom: none;
+}
+
+.drawer.neutral {
+  border: 20px solid var(--grey);
+  border-bottom: none;
+}
+
+span.nav span { cursor: pointer; }
+span.nav span:hover { font-weight: bold; color: var(--black); }
 
 /* ----- */
 /* Text highlights */
